app/assets/stylesheets/components/shared/c-header.scss
.c-header {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  height: auto;
  margin-top: 10px;
  background: $color-1;

  .container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    height: 100%;

    .hamburguer {
      position: relative;
      min-width: 23px;
      height: 16px;
      padding: 0;

      cursor: pointer;

      @media #{$mq-laptop} {
        display: none;
      }

      > .ingredient {
        display: block;
        position: absolute;
        left: 0;
        width: 100%;
        height: 2px;

        background-color: $color-4;

        &:first-child {
          top: 0;
        }

        &:nth-child(2) {
          top: 50%;
        }

        &:last-child {
          top: 100%;
        }
      }
    }
  }

  &.-cover {
    background: transparent;
  }

  &.-fixed {
    height: 50px;
  }
}

